Fixed scrollbar issue, added event handling

--- a/css/app.css
+++ b/css/app.css
@@ -11,7 +11,7 @@ div#canvas-wrapper {
   -moz-box-sizing: border-box;
   -o-box-sizing: border-box;
   -ms-box-sizing: border-box;
-  overflow: auto;
+  overflow: hidden;
 }
 
 div#controls .button {
